<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/customer_login">

    <EditText
        android:id="@+id/et_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:textColor="@color/white"
        android:ems="10"
        android:inputType="text"
        android:hint="Username"/>


    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:ems="10"
        android:textColor="@color/white"
        android:layout_below="@+id/et_username"
        android:inputType="textPassword"
        android:hint="Password"/>

    <EditText
        android:id="@+id/et_cpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:ems="10"
        android:textColor="@color/white"
        android:layout_below="@+id/et_password"
        android:inputType="textPassword"
        android:hint="Confirm Password"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_cpassword"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="124dp"
        android:backgroundTint="@color/teal_200"
        android:ems="10"
        android:text="Register" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="124dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="207dp"
        android:backgroundTint="@color/teal_200"
        android:ems="10"
        android:text="Login" />

    <TextView
        android:id="@+id/others"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/socialicons"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="132dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="27dp"
        android:text="or sign in with"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/socialicons"
        android:layout_alignParentBottom="true"
        android:gravity="center">


        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/google"/>
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/facebook"/>

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/discord"/>
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/github"/>

    </LinearLayout>


</RelativeLayout>