<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/customer_login"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <EditText
        android:id="@+id/et_lusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="100dp"
        android:textColor="@color/white"
        android:ems="10"
        android:hint="Username"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_lpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_lusername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btn_llogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_lpassword"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="123dp"
        android:backgroundTint="@color/teal_200"
        android:ems="10"
        android:text="Login" />

    <Button
        android:id="@+id/btn_lregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="125dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="277dp"
        android:backgroundTint="@color/teal_200"
        android:ems="10"
        android:text="Register" />

    <TextView
        android:id="@+id/others"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/socialicons"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="132dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="27dp"
        android:text="or sign in with"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/socialicons"
        android:layout_alignParentBottom="true"
        android:gravity="center">


        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/google"/>
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/facebook"/>

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/discord"/>
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/github"/>

    </LinearLayout>

</RelativeLayout>