<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/messageList"
            android:layout_width="match_parent"
            android:layout_height="403dp" />

        <LinearLayout
            android:layout_width="411dp"
            android:layout_height="89dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sendMessage"
                android:layout_width="41dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Send" />

            <AutoCompleteTextView
                android:id="@+id/textMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Enter Message Here"
                android:minHeight="48dp" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>